2021-05-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Bump libsoup3 version to 2.99.5
        https://bugs.webkit.org/show_bug.cgi?id=225506

        Reviewed by Philippe Normand.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:

2021-05-06  Yoshiaki Jitsukawa  <yoshiaki.jitsukawa@sony.com>

        [OpenSSL] Implement CryptoAlgorithmRSA*
        https://bugs.webkit.org/show_bug.cgi?id=225294

        Reviewed by Don Olmstead.

        Implement RSA for OpenSSL.

        Implement CryptoAlgorithmRSA_OAEP, CryptoAlgorithmRSA_PSS,
        CryptoAlgorithmRSAES_PKCS1_v1_5, CryptoAlgorithmRSASA_PKCS1_v1_5,
        and CryptoKeyRSA for OpenSSL.

        Note that if such OpenSSL version that does not support RSA_OAEP or
        RSA_PSS, the WebCrypto API for those algorithm will return a
        NotSupportedError.

        * Source/cmake/OptionsPlayStation.cmake:
        * Source/cmake/OptionsWinCairo.cmake:

2021-05-05  Michael Catanzaro  <mcatanzaro@gnome.org>

        USE_64KB_PAGE_BLOCK build option is broken
        https://bugs.webkit.org/show_bug.cgi?id=225393

        Reviewed by Adrian Perez de Castro.

        Call SET_AND_EXPOSE_TO_BUILD().

        * Source/cmake/WebKitFeatures.cmake:

2021-05-05  Michael Catanzaro  <mcatanzaro@gnome.org>

        Fix typo in comment in WebKitFeatures.cmake
        https://bugs.webkit.org/show_bug.cgi?id=225392

        Unreviewed.

        * Source/cmake/WebKitFeatures.cmake:

2021-04-27  Don Olmstead  <don.olmstead@sony.com>

        [CMake] Don't use FORWARDING_HEADERS_DIR for GTK WebKit headers
        https://bugs.webkit.org/show_bug.cgi?id=225006

        Reviewed by Michael Catanzaro.

        Create CMake variables WebKit2Gtk_FRAMEWORK_HEADERS_DIR and WebKit2Gtk_DERIVED_SOURCES_DIR
        to represent where the WebKit2 GTK headers and derived sources will reside. The names and