@@ -258,8 +258,8 @@ class Distcheck(object):
 
     def check_symbols(self, build_dir):
         check_bss = os.path.join(self.source_root, 'Tools', 'Scripts', 'check-for-global-bss-symbols-in-webkitgtk-libs')
-        libjsc = os.path.join(build_dir, 'lib', 'libjavascriptcoregtk-4.0.so')
-        libwk = os.path.join(build_dir, 'lib', 'libwebkit2gtk-4.0.so')
+        libjsc = os.path.join(build_dir, 'lib', 'libjavascriptcoregtk-4.1.so')
+        libwk = os.path.join(build_dir, 'lib', 'libwebkit2gtk-4.1.so')
         subprocess.check_call([check_bss, libjsc, libwk])
 
         check_version_script = os.path.join(self.source_root, 'Tools', 'Scripts', 'check-for-invalid-symbols-in-version-script')
@@ -295,7 +295,7 @@ if __name__ == "__main__":
         if arguments.version is not None:
             return
 
-        pkgconfig_file = os.path.join(arguments.build_dir, "Source/WebKit/webkit2gtk-4.0.pc")
+        pkgconfig_file = os.path.join(arguments.build_dir, "Source/WebKit/webkit2gtk-4.1.pc")
         if os.path.isfile(pkgconfig_file):
             p = subprocess.Popen(['pkg-config', '--modversion', pkgconfig_file], stdout=subprocess.PIPE)
             version = p.communicate()[0]
