@@ -1,3 +1,13 @@
+2021-05-14  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. [GTK] Fix make distcheck
+
+        Update library version now that we build with soup3 by default.
+
+        * Scripts/make-dist:
+        (Distcheck.check_symbols):
+        (ensure_version_if_possible):
+
 2021-05-13  Aakash Jain  <aakash_jain@apple.com>
 
         report-non-inclusive-language should skip symlinks
