@@ -1,3 +1,11 @@
+2021-05-14  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. [GTK] Fix make distcheck
+
+        Use WEBKITGTK_API_DOC_VERSION instead of WEBKITGTK_API_VERSION or the documentation install rules.
+
+        * Source/PlatformGTK.cmake:
+
 2021-05-07  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK][WPE] Bump libsoup3 version to 2.99.5
